# solana-rust-smart-product-passport

./: .dockerignore  .gitignore  .vercelignore  DOCKER_BUILD.md  ENVIRONMENT_SETUP.md  README.markdown  README.md  VERCEL_SETUP.md  build-and-run.sh  build.bat  build.sh  docker-compose.yml  nginx.conf  package-lock.json  package.json  upload_nft_metadata.ts  vercel.json
.github/workflows/: deploy.yml
anchor/: Anchor.tml  Anchor.toml  package-lock.json  package.json
anchor/programs/smart-passport/: Cargo.toml
anchor/programs/smart-passport/src/: lib.rs
anchor/tests/: smart-passport.ts
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  env.example  env.local  package-lock.json  package.json  server.js
backend/src/: collection_service.rs  main.rs  nft_service.rs  solana_client.rs  upload_service.rs
client/: package.json
config/: program_config.json
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/app/: .gitignore  LANGUAGE_SYSTEM.md  README.md  env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js  vitest.config.js
frontend/app/public/: index.html
frontend/app/src/: App.jsx  i18n.js  index.css  main.jsx  phantomSigner.js  polyfills.js
frontend/app/src/components/: Community.jsx  CostCalculator.jsx  CreateCollectionPage.jsx  CreateNFTPage.jsx  FAQ.jsx  LanguageSwitcher.jsx  LanguageTest.jsx  LoadingSpinner.jsx  PassportsPage.jsx  ScanPage.jsx  ThreeDBoxSection.jsx  TransactionSigningModal.jsx  TreasuryDashboard.jsx
frontend/app/src/components/ui/: card.jsx
frontend/app/src/hooks/: useLanguage.js
frontend/app/src/locales/: en.json  uk.json
frontend/app/src/tests/: CreateNFT.test.jsx  setup.js
frontend/app/src/utils/: airdrop.js  bundlrUpload.js  collectionCreator.js  irysUpload.js  languageUtils.js  nftCreator.js  nftUtils.js
frontend/my-vite-app/: package-lock.json  package.json
frontend/my-vite-app/src/: App.jsx
frontend/public/: index.html
frontend/src/: App.jsx
programs/smart-passport/src/: Anchor.toml  Cargo.toml  lib.rs
