[package]
name = "spp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Веб-сервер
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana та Anchor
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
anchor-client = "0.29"
anchor-lang = "0.29"

# Metaplex (використовуємо правильні назви пакетів)
mpl-token-metadata = "3.2"
spl-token = "3.5"

# Утиліти
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
base64 = "0.21"
bs58 = "0.5"
bincode = "1.3"

# Файлові операції
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json", "multipart"] }

[dev-dependencies]
tokio-test = "0.4" 