[package]
name = "smart-passport"
version = "0.1.0"
description = "Smart Product Passport program on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_passport"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", optional = true }